# ai-harness

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  VERSIONING.md  ai_harness.py  pyproject.toml
.agents/skills/ai-harness/: SKILL.md
.claude/skills/: ai-harness
.github/workflows/: ci.yml
.harness/: config.yml  state.yml
.harness/memory/: lessons.md
.harness/phases/archive/: .gitkeep
.harness/phases/archive/2026-07-01-bootstrap-command/: EVIDENCE.md  HANDOFF.md  PLAN.md  PROGRESS.yml  SUMMARY.md
.harness/phases/archive/2026-07-01-g1-phase-branch/: EVIDENCE.md  HANDOFF.md  PLAN.md  PROGRESS.yml  SUMMARY.md
.harness/phases/archive/2026-07-01-g5-deepen-check/: EVIDENCE.md  HANDOFF.md  PLAN.md  PROGRESS.yml  SUMMARY.md
.harness/phases/archive/2026-07-01-harden-state-check-version/: EVIDENCE.md  HANDOFF.md  PLAN.md  PROGRESS.yml  SUMMARY.md
.harness/phases/current/: EVIDENCE.md  HANDOFF.md  PLAN.md  PROGRESS.yml
docs/: REVIEW-AND-ROADMAP.md
docs/adr/: 0000-template.md  0001-redline-single-file-demotion.md
docs/ai-harness/: CONTEXT.md  DECISIONS.md  INDEX.md  OUT-OF-SCOPE.md  POLICIES.md  README.md  ROADMAP.md  STATE.md
evals/: README.md  run.py
evals/scenarios/: checkpoint-does-not-touch-handoff.json  migrate-then-init-preserves-legacy.json  v04-agents-source-and-symlink.json  v06-router-references-skill.json  v08-cursor-agents-native.json  v08-cursor-copy.json
scripts/: merge-pr.sh
skills/ai-harness-init/: SKILL.md
tests/: test_harness_cli.py
todo/: backlog.md  multi-tool-roadmap.md  v0.5-plan.md
(+10 files in other folders)
