[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-harness"
dynamic = ["version"]
description = "轻量、单文件、零依赖的仓库级 AI 协作 harness：人读/机器分层 + 有界 phase + compact/archive/recall"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "ai-harness" }]
keywords = ["ai", "agent", "harness", "context-engineering", "claude", "codex", "cursor"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Xavier189/ai-harness"

# 单文件模块（不是 package）——保住「单文件零依赖」招牌，同时可被 console_scripts 引用。
[tool.setuptools]
py-modules = ["ai_harness"]

# 版本单一来源：读 ai_harness.__version__（N4，消除 pyproject 与代码漂移）。
[tool.setuptools.dynamic]
version = { attr = "ai_harness.__version__" }

# 安装后提供两个等价命令：harness（短）与 ai-harness（全名，给 uvx/pipx 用）。
[project.scripts]
harness = "ai_harness:main"
ai-harness = "ai_harness:main"
